@@ -1,3 +1,11 @@
+2010-07-21  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-internal.lisp
+	(delete-child-and-children-in-all-frames): New function and
+	binding: Second mode - Control+Delete delete the current child and
+	its children in all frames (ie: close the current child and its
+	children).
+
 2010-07-20  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (remove-child-in-frame): Do not destroy
